--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -84,6 +84,7 @@ ol.ssMenu {
 	text-align: center;
 	margin-top: 15px;
 	font-size: 29px;
+	min-height: 82px;
 }
 
 .imageProduct {
@@ -98,9 +99,10 @@ ol.ssMenu {
 .descriptionProduct {
 	max-width: 295px;
 	margin: 0 auto;
+	height: 70px;
 }
 
-img {
+.imageProduct img {
 	text-align: center;
 	background-attachment: fixed;
 	min-height: 100%;
@@ -108,7 +110,7 @@ img {
 }
 
 .product {
-	height: 430px;
+	min-height: 530px;
 	width: 360px;
 	position: relative;
 	float: left;
@@ -126,18 +128,20 @@ img {
 }
 
 .buttonAddCart {
-	position: absolute;
-	right: 25px;
-	bottom: 20px;
+	float: right;
 }
 
 .priceProduct {
-	position: absolute;
-	left: 28px;
-	bottom: 19px;
+	float: left;
 	font-size: 25px;
 	color: #c94242;
 	white-space: nowrap;
+	margin-top: 1px;
+}
+
+.priceProduct img {
+	width: 35px;
+	margin-bottom: 4px;
 }
 
 .filtre {
@@ -217,6 +221,13 @@ img {
 	width: 100%;
 }
 
+.blockProductBottom {
+	width: 100%;
+	display: inline-block;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 @media screen and (max-width: 767px) {
 	.menu-lateral {
 		display: block;
@@ -251,6 +262,24 @@ img {
 		float: none;
 		width: 100%;
 	}
+	.priceProduct {
+		font-size: 20px;
+		margin-top: 4px;
+	}
+	.priceProduct img {
+		width: 30px;
+	}
+	.blockProductBottom {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+}
+
+.allBlockProductBottom {
+	min-height: 45px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 
 @media screen and (max-width: 1200px) {
