--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -220,12 +220,21 @@ ol.ssMenu {
 	width: 100%;
 }
 
+
 .blockProductBottom {
 	width: 100%;
 	display: inline-block;
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
+.price-product h3{
+  line-height:0;
+  margin-top:18px;
+  width:100px;
+  float:left;
+}
+
 
 @media screen and (max-width: 767px) {
 	.menu-lateral {
