[FTL] Avancement integration FTL

--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -235,6 +235,23 @@ ol.ssMenu {
   float:left;
 }
 
+.price-product button {
+    margin-left: 16px;
+}
+
+.img-product{
+	width: 100%
+}
+
+.artist-product a{
+	 color: #c94242;
+	 
+}
+
+.artist-product{
+	 font-size: 17px;
+	 margin-bottom: 10px;
+}
 
 @media screen and (max-width: 767px) {
 	.menu-lateral {
