--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -105,8 +105,8 @@ ol.ssMenu {
 .imageProduct img {
 	text-align: center;
 	background-attachment: fixed;
-	min-height: 100%;
-	min-width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .product {
@@ -220,7 +220,6 @@ ol.ssMenu {
 	width: 100%;
 }
 
-
 .blockProductBottom {
 	width: 100%;
 	display: inline-block;
@@ -228,29 +227,32 @@ ol.ssMenu {
 	padding-right: 20px;
 }
 
-.price-product h3{
-  line-height:0;
-  margin-top:18px;
-  width:100px;
-  float:left;
+.price-product h3 {
+	line-height: 0;
+	margin-top: 18px;
+	width: 100px;
+	float: left;
 }
 
 .price-product button {
-    margin-left: 16px;
+	margin-left: 16px;
 }
 
-.img-product{
+.img-product {
 	width: 100%
 }
 
-.artist-product a{
-	 color: #c94242;
-	 
+.artist-product a {
+	color: #c94242;
 }
 
-.artist-product{
-	 font-size: 17px;
-	 margin-bottom: 10px;
+.artist-product {
+	font-size: 17px;
+	margin-bottom: 10px;
+}
+
+.first-letter {
+	text-transform: capitalize;
 }
 
 @media screen and (max-width: 767px) {
