--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -255,6 +255,12 @@ ol.ssMenu {
 	text-transform: capitalize;
 }
 
+.hashTagList {
+	margin-left: 40px;
+	margin-bottom: 20px;
+	font-weight: 600;
+}
+
 @media screen and (max-width: 767px) {
 	.menu-lateral {
 		display: block;
