--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -325,6 +325,14 @@ ol.ssMenu {
 	font-size: 24px;
 }
 
+.alert{
+	display: none;
+}
+
+.linkBold{
+	font-weight: 600;
+}
+
 @media screen and (max-width: 767px) {
 	.menu-lateral {
 		display: block;
