Ajout de quelques touche de bleu pour ajouter de la couleur. Modification du è de succès en caractère html pour bon affichage.

--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -55,7 +55,7 @@ ol.ssMenu {
 }
 
 .titleMenu a {
-	color: #777;
+	color: #337ab7;
 	text-decoration: none;
 }
 
@@ -65,7 +65,7 @@ ol.ssMenu {
 }
 
 .titleMenu a:HOVER {
-	color: #5e5e5e;
+	color: #2e6da4;
 }
 
 .blockSsMenu {
@@ -106,7 +106,7 @@ ol.ssMenu {
 	text-align: center;
 	background-attachment: fixed;
 	height: 100%;
-	width: 100%;
+	width: auto;
 }
 
 .product {
@@ -143,7 +143,9 @@ ol.ssMenu {
 	width: 35px;
 	margin-bottom: 4px;
 }
-
+.breadcrumb .active, #nozama{
+	color:#337ab7
+}
 .filtre {
 	min-height: 40px;
 	width: 100%;
@@ -152,7 +154,9 @@ ol.ssMenu {
 	border-radius: 5px;
 	padding: 15px;
 }
-
+.carousel-inner{
+	margin-top: 1%;
+}
 .buttonWithoutBackground {
 	display: inline-block;
 	padding: 6px 12px;
@@ -195,19 +199,26 @@ ol.ssMenu {
 }
 
 .buttonWithoutBackground:hover {
-	background-color: #F7F7F7;
+	border: 1px solid #2e6da4;
+	font-weight: 400;
+	background-color: #337ab7;
+	text-decoration: none;
+	color: #fff;
 }
 
 .selectedFormat {
-	border: 1px solid #DC5555;
-	font-weight: 600;
-	background-color: #FAEBD7;
+	border: 1px solid #2e6da4;
+	font-weight: 400;
+	background-color: #337ab7;
+	text-decoration: none;
+	color: #fff;
 }
 
 .selectedFormat:hover {
-	border: 1px solid #DC5555;
-	font-weight: 600;
-	background-color: #FAEBD7;
+	border: 1px solid #929292;
+	color: #000;
+    font-weight: 400;
+	background-color: #F7F7F7;
 }
 
 .replaceCarousel {
