--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -476,11 +476,10 @@ ul.step li a, ul.step li span, ul.step li.step_current span, ul.step li.step_cur
 	{
 	display: block;
 	padding: 13px 10px 14px 13px;
-	color: #78909c;
+	color: #FFFFFF;
 	font-size: 17px;
 	line-height: 21px;
 	font-weight: bold;
-	text-shadow: 1px 1px white;
 	position: relative;
 }
 
@@ -719,10 +718,6 @@ ul.step a:hover:after {
 	}
 }
 
-#genre {
-	margin: 0 16px 16px;
-}
-
 .blockTdBeforeCart {
 	display: none;
 }
@@ -784,16 +779,22 @@ ul.step a:hover:after {
 		width: 50%;
 		float: left;
 		height: 50px;
-		line-height: 37px;
+		line-height: 37px !important;
 	}
 	.tdPrixTotalFinal {
 		width: 50%;
 		float: right;
 	}
-	.tdQuantiteProduct,.tdFormatProduct {
+	.tdQuantiteProduct, .tdFormatProduct {
 		clear: both;
 	}
 	.priceProduct1single, .totalProductBlock {
 		display: inline-block;
+	}
+}
+
+@media ( max-width : 767px) {
+	.input-100 {
+		width: 100%
 	}
 }
