rectification modif + debut compte prepaye

--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -739,6 +739,10 @@ ul.step a:hover:after {
 	width: 100%;
 }
 
+.clickProduct{
+	cursor: pointer;
+}
+
 @media ( min-width : 769px) {
 	.blockUpdateAdress {
 		width: 78px;
