--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -742,6 +742,9 @@ ul.step a:hover:after {
 .clickProduct{
 	cursor: pointer;
 }
+.breakWord{
+	    word-break: break-word;
+}
 
 @media ( min-width : 769px) {
 	.blockUpdateAdress {
