--- a/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
+++ b/AmazonProjet/src/main/webapp/WEB-INF/resources/css/site.css
@@ -224,7 +224,7 @@ ol.ssMenu {
 	border: 1px solid #929292;
 	color: #000;
 	font-weight: 400;
-	background-color: #F7F7F7;
+	background-color: #2e6da4;
 }
 
 .replaceCarousel {
